# fwtv

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Caddyfile  Dockerfile  README.md  cloud.yml  docker-compose.yaml  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: build.yml  docker-build.yml  lint.yml  release.yml  test.yml
factorialhr_analysis/: constants.py  factorialhr_analysis.py  routes.py  state.py  templates.py
factorialhr_analysis/components/: __init__.py  authentication_component.py  date_range_selector.py  footer.py  navbar.py
factorialhr_analysis/pages/: __init__.py  index.py  index_page.py  login.py  oauth_page.py  working_time_verification_page.py
factorialhr_analysis/states/: __init__.py  data_state.py  oauth_state.py
factorialhr_analysis/working_time_verification/: __init__.py  helper.py  verification.py
fwtv/: __init__.py  factorial.py
src/fwtv/: main.py
src/fwtv/widgets/: settings_widget.py  table_widget.py  working_time_widget.py
tests/: test_factorial.py  test_verifier.py  test_working_time_verification.py
tests/data/: 10_hours_error.json  6_hours_error.json  9_hours_error.json  all_correct.json  employees.json  precondition.json
